--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
         <ul class="nav-inner">
           <li class="active"><a href="/">Home</a></li>
           <li><a href="#about">Feedback</a></li>
-          <li><a href="#services">Send us feedback/complaints</a></li>
+          <li><a href="#services">Send us feedback</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><a href="/login">Login</a></li>
          
@@ -82,7 +82,7 @@
           </div>
           <div class="col-lg-6" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0 pl-0 pl-lg-3 ">
-              <h3>How to respond to feedback/complaints</h3>
+              <h3>How to respond to feedback</h3>
               <ul>
                 <li><i class="bx bx-check-double"></i> Fill out all required fields.</li>
                 <li><i class="bx bx-check-double"></i> Write about what you feel for the particular.</li>
@@ -109,8 +109,8 @@
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Send us feedback/complaints</h2>
-          <p>We care for your feedback/complaints</p>
+          <h2>Send us feedback</h2>
+          <p>We care for your feedback</p>
         </div>
 
         <div class="row">
